# khoa_luan_tot_nghiep

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json
.claude/: settings.local.json
ai-service/: Dockerfile  package.json  tsconfig.json
ai-service-vision/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai-service-vision/app/: config.py  deps.py  main.py
ai-service-vision/app/routers/: health.py  inference.py
ai-service-vision/app/schemas/: detection.py
ai-service-vision/app/services/: damage_calculator.py  yolo_service.py
ai-service-vision/scripts/: clean_non_iphone.py  data_models.py  debug_titles.py  reparse_metadata.py  scrape_chotot.py  scrape_tgdd.py  stats.py  title_parser.py  utils.py
ai-service-vision/tests/: test_damage_calculator.py  test_title_parser.py
ai-service/src/: main.ts
ai-service/src/gemini-vision/: gemini-vision.service.ts
backend/: Dockerfile  out.txt  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/categories/: categories.controller.ts  categories.service.ts
backend/src/chat/: chat.gateway.ts  chat.module.ts  conversations.controller.ts  (+1 more)
backend/test/: app.e2e-spec.ts
docker/: docker-compose.yml
docs/: setup.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
prisma/: schema.prisma
(+49 files in other folders)
